Add search API endpoint, start FRONTEND
